trybuild-qcell/src/compiletest/tcell-03.stderr
error[E0308]: mismatched types
  --> src/compiletest/tcell-03.rs:17:31
   |
17 |     let c1mutref = owner_b.rw(&*c1);    // Compile error
   |                               ^^^^ expected struct `MarkerB`, found struct `MarkerA`
   |
   = note: expected reference `&TCell<MarkerB, _>`
              found reference `&TCell<MarkerA, u32>`
